--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
         <url-pattern>/detalle</url-pattern>
     </servlet-mapping>
 
-        <!-- REGISTRO de astronauta -->
+    <!-- REGISTRO de astronauta -->
     <servlet>
         <servlet-name>AstronautRegisterServlet</servlet-name>
         <servlet-class>com.missiontracker.servlet.AstronautRegisterServlet</servlet-class>
@@ -31,3 +31,19 @@
         <servlet-name>AstronautRegisterServlet</servlet-name>
         <url-pattern>/astronautas/registrar</url-pattern>
     </servlet-mapping>
+
+    <!-- Elimianr de astronauta -->
+    <servlet>
+        <servlet-name>AstronautDeleteServlet</servlet-name>
+        <servlet-class>com.missiontracker.servlet.AstronautDeleteServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>AstronautDeleteServlet</servlet-name>
+        <url-pattern>/astronautas/eliminar</url-pattern>
+    </servlet-mapping>
+
+        <servlet>
+        <servlet-name>MissionListServlet</servlet-name>
+        <servlet-class>com.missiontracker.servlet.MissionListServlet</servlet-class>
+    </servlet>
