cambiar metodos para meter instancia de dbconecction

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,3 +21,4 @@
         <servlet-name>AstronautDetailServlet</servlet-name>
         <url-pattern>/detalle</url-pattern>
     </servlet-mapping>
+    </web-app>
