--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,47 +21,4 @@
         <servlet-name>AstronautDetailServlet</servlet-name>
         <url-pattern>/detalle</url-pattern>
     </servlet-mapping>
-
-    <!-- REGISTRO de astronauta -->
-    <servlet>
-        <servlet-name>AstronautRegisterServlet</servlet-name>
-        <servlet-class>com.missiontracker.servlet.AstronautRegisterServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>AstronautRegisterServlet</servlet-name>
-        <url-pattern>/astronautas/registrar</url-pattern>
-    </servlet-mapping>
-
-    <!-- Elimianr de astronauta -->
-    <servlet>
-        <servlet-name>AstronautDeleteServlet</servlet-name>
-        <servlet-class>com.missiontracker.servlet.AstronautDeleteServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>AstronautDeleteServlet</servlet-name>
-        <url-pattern>/astronautas/eliminar</url-pattern>
-    </servlet-mapping>
-
-        <servlet>
-        <servlet-name>MissionListServlet</servlet-name>
-        <servlet-class>com.missiontracker.servlet.MissionListServlet</servlet-class>
-    </servlet>
-
-        <!-- update astronauta -->
-    <servlet>
-        <servlet-name>AstronautUpdateServlet</servlet-name>
-        <servlet-class>com.missiontracker.servlet.AstronautUpdateServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>AstronautUpdateServlet</servlet-name>
-        <url-pattern>/astronautas/actualizar</url-pattern>
-    </servlet-mapping>
-    
-    <!-- Lista misiones -->
-
-    <servlet-mapping>
-        <servlet-name>MissionListServlet</servlet-name>
-        <url-pattern>/misiones</url-pattern>
-    </servlet-mapping>
+</web-app>
